--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,9 @@ body {
   font-family: "Inter", serif;
 }
 
-input{
-    box-shadow: 0px 1px 2px 0px #1018280D;
- 
+.custom-checkbox {
+  width: 20px !important;
+  height: 20px !important; 
+  border: 1px solid #D0D5DD !important;
+  border-radius: 6px !important;
 }
